antes de cambiar a formato icalp

--- a/intro/introduction.tex
+++ b/intro/introduction.tex
@@ -1,10 +1,23 @@
+% !TEX root = ../main-ring-signature.tex
+
 Ring signatures, introduced by Rivest, Shamir and Tauman, \cite{AC:RivShaTau01}, allow to anonymously sign a message on behalf of a ring of users $R=\{P_1,\ldots,P_n\}$, only if the signer belongs to that ring. That is, no one outside $R$ can forge a valid signature and  an honestly computed signature reveals (essentially) no information about the actual signer.  
 Unlike other similar primitives such as group signatures \cite{EC:ChaVan91}, ring signatures are not coordinated: each user generates secret/public keys on his own --- i.e.~no central authorities --- and might sign on behalf of a ring without the approval or assistance of the other members.
 
-While the more efficient constructions have signature size logarithmic in the size of the ring \cite{EC:GroKoh15,EC:LLNW16}, all of them rely on the {random oracle model}.
-Without random oracles all constructions have signatures of size linear in the size of the ring, being the sole exception the $\Theta(\sqrt{n})$ ring signature of Chandran et al.~\cite{ICALP:ChaGroSah07}. 
-Although some previous works claim to construct signatures of constant \cite{ACISP:BosDasRan15} or logarithmic \cite{IET:GriSusPla16} size, they are either in a weaker security model or we can identify a flaw in the construction (see Section \ref{sec:rs-flawed}). The only (non-asymptotic) improvements we are aware of are \cite{TCC:Rafols15,AC:GonHevRaf15}.
+The original motivation for ring signatures was anonymous leakage of secrets. Suppose a high rank officer wants to leak some sensitive information to a journalist without revealing its identity. To do so, it signs this information using a ring signature where the ring contains all other high rank officer. Besides this hypothetical application, with the advent of cryptocurrency ring signatures have found new and more practical applications. For example, for spending a coin in Monero, a user form a ring from public keys in the blockchain to issue a ring signature on the transaction. Thereby, the anonimity properties of the ring signature guarantees untraceability and fungibility. 
+Given the practical usefullness of ring signatures, it becomes crucial to study and improve its efficiency.
 
+\subsection{Related Work}
+The efficiency of a ring signature might be splitted in three parrameters: the signature size, the cost (time) of computig a signature, and the cost (time) of verifying a signature. Among these metrics, the signature size has received the most attention and improvements in the size ussally imply improvement on the other metrics.
+In terms of ring size, the most efficient constructions have signature size logarithmic in the size of the ring \cite{EC:GroKoh15,EC:LLNW16}. However,  both constructions rely on the {random oracle model}, which is an idealization of hash functions and with known inconsitencie \cite{FOCS:GolKal03}. Malavolta et al.~ constructed a constant size ring signature without random oracles \cite{AC:MalSho17}. However, their construction achieves constant-size signatures at the cost of relying on controversial non-falsifiable assumptions \cite{C:Naor03} such as the knowledge of exponent assumption.
+Given the disadvantages of random oracles and non-falsifiable assumptions, it is worth to explore constructions from more standard assumptions.
+
+Chase and Lysyanskaya introduced signatures of knowledge \cite{C:ChaLys06} and using this primitive constructed constant-size ring signatures from accumulators, following Dodis et al.\cite{EC:DKNS04}. The scheme description is sparsely detailed and no proof of security is given but, for fairness, we have to say that their work is previous to the formal definition of ring signatures of Bender et al.~\cite{TCC:BenKatMor06}. However, a quick analysis of their proposed scheme shows that is impractical. Their scheme goes as follows.
+Given a ring of RSA public keys $R = \{y_1,...,y_n\}\subseteq \Z_{\phi(N)}$, one can compute an accumulated value $a = g^{\prod_{i=1}^n y_i}$ and a witness $w_i = a^{-y_i} \mod N$ that $y_i$ is accumulated in $a$, which can be verified cheking if $a = w_i^{y_i} \mod N$. A ring signature on a message $m$ is computed as a signature on $m$ of knowledge of $x_i,y_i\in \Z_{\phi{N}}, w_i\in \Z_N$ such that: a) $x_iy_i = 1 \mod \phi(N)$ and b)  $a = w_i^{y_i} \mod N$. However, signatures of knowledge are built on top of simulation sound NIZK which in turn is built from normal NIZK. Since no efficient NIZK (without random oracles nor falsifiable assumptions) for statements a) and b) is known, and the only plausible alternative seems generic NIZK arguments for circuit satisfiability, whose proofs are of size $\Omega(|C|)$. For example, using Groth-Sahai proofs, one might expect the circuit for a) and b) to have at least $10^4$ gates, and thus proof will be of size greater than $10^4$ elements of a bilinear group.
+
+Despite Chase and Lysyanskaya's construction, without random oracles nor non-fasifiable assumptions all constructions have signatures of size linear in the size of the ring, being the sole exception the $\Theta(\sqrt{n})$ ring signature of Chandran et al.~\cite{ICALP:ChaGroSah07} 
+Although some previous works claim to construct signatures of constant \cite{ACISP:BosDasRan15} or logarithmic \cite{IET:GriSusPla16} size, all of them fail  (see Section \ref{sec:rs-flawed}). The only (non-asymptotic) improvements we are aware of are \cite{TCC:Rafols15,AC:GonHevRaf15}.
+
+\subsection{Our contribution}
 In this work we present the first ring signature (without random oracles) whose signature size is asymptotically smaller than Chandran et al.'s. Our ring signature consists of $\Theta(\sqrt[3]{n})$ group elements, computing a signature requires $\Theta(\sqrt[3]{n})$ exponentiations, and verifying a signature requires $\Theta(n^{2/3})$ pairings.
 
 The security of our construction relies on a security assumption --- the {permutation pairing assumption} --- introduced by Groth and Lu \cite{AC:GroLu07} in an unrelated setting: proofs of correctness of a shuffle. While the assumption is ``non-standard'', in the sense that is not a ``DDH like'' assumption, it is a falsifiable assumption and it was proven hard in generic symmetric groups by Groth and Lu. For easiness of exposition, we work on symmetric groups ($\GG_1=\GG_2$) but our techniques might be easily extended to more efficient asymmetric groups in light of recent works on automation of secure symmetric-to-asymmetric conversion \cite{C:AGOT14a,C:AbeHosOhk16,CCS:AkiGarHoh15}.
@@ -18,3 +31,6 @@ Our ring signature outperforms Chandran et al.'s in terms signature size for any
 %	\includegraphics[scale=.25]{intro/sign_time}
 %	\includegraphics[scale=.25]{intro/ver_time}
 %\end{figure}
+
+\subsection{The Hardness of constructing Ring Signatures.}
+\input{prelim/flawed}
